--- a/app/translations/messages.en.xlf
+++ b/app/translations/messages.en.xlf
@@ -2,10 +2,18 @@
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
   <file source-language="en" datatype="plaintext" original="file.ext">
     <body>
-      <trans-unit id="label.actions">
-        <source>label.actions</source>
-        <target>Actions</target>
+      <trans-unit id="title.email_send">
+        <source>title.email_send</source>
+        <target>Send emails to users by category</target>
       </trans-unit>
+       <trans-unit id="action.send">
+         <source>action.send</source>
+          <target>Send</target>
+       </trans-unit>
+       <trans-unit id="message.emails_send">
+          <source>message.emails_send</source>
+          <target>Emails sent successfully!</target>
+       </trans-unit>
     </body>
   </file>
 </xliff>
